// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`faros_jira faros_issues 1`] = `
Array [
  "Processed 1 records",
  "Processed records by stream: {\\\\\\"mytestsource__jira__faros_issues\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 23 records",
  "Would write records by model: {\\\\\\"__Flush\\\\\\":1,\\\\\\"tms_Epic\\\\\\":1,\\\\\\"tms_Label\\\\\\":2,\\\\\\"tms_SprintHistory\\\\\\":11,\\\\\\"tms_Task\\\\\\":1,\\\\\\"tms_TaskAssignment\\\\\\":1,\\\\\\"tms_TaskDependency\\\\\\":1,\\\\\\"tms_TaskDependency__Deletion\\\\\\":1,\\\\\\"tms_TaskProjectRelationship\\\\\\":1,\\\\\\"tms_TaskTag\\\\\\":2,\\\\\\"tms_Task__Update\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`faros_jira faros_issues 2`] = `
Array [
  Object {
    "tms_Task": Object {
      "additionalFields": Array [
        Object {
          "name": "Components",
          "value": "[]",
        },
      ],
      "createdAt": "2021-10-07T20:00:08.396Z",
      "creator": Object {
        "source": "Jira",
        "uid": "6025c1954fb89e0070d00ae3",
      },
      "description": "PLAYG Epic 1 Description",
      "epic": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
      "name": "PLAYG Epic 1 Summary",
      "parent": null,
      "points": null,
      "priority": "Medium",
      "resolutionStatus": null,
      "resolvedAt": null,
      "source": "Jira",
      "sourceSystemId": "10596",
      "sprint": Object {
        "source": "Jira",
        "uid": "55",
      },
      "status": Object {
        "category": "Todo",
        "detail": "To Do",
      },
      "statusChangedAt": "2021-10-07T20:00:08.396Z",
      "statusChangelog": Array [
        Object {
          "changedAt": "2021-10-07T20:00:08.396Z",
          "status": Object {
            "category": "Todo",
            "detail": "To Do",
          },
        },
      ],
      "type": Object {
        "category": "Custom",
        "detail": "Epic",
      },
      "uid": "PLAYG-6",
      "updatedAt": "2024-01-24T14:56:25.365Z",
      "url": "https://faros-ai.atlassian.net/browse/PLAYG-6",
    },
  },
  Object {
    "tms_TaskProjectRelationship": Object {
      "project": Object {
        "source": "Jira",
        "uid": "PLAYG",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_Epic": Object {
      "createdAt": "2021-10-07T20:00:08.396Z",
      "description": "PLAYG Epic 1 Description",
      "name": "PLAYG Epic 1 Summary",
      "project": Object {
        "source": "Jira",
        "uid": "PLAYG",
      },
      "source": "Jira",
      "status": Object {
        "category": "Todo",
        "detail": "To Do",
      },
      "uid": "PLAYG-6",
      "updatedAt": "2024-01-24T14:56:25.365Z",
    },
  },
  Object {
    "tms_TaskAssignment": Object {
      "assignedAt": "2021-10-07T18:04:10.236Z",
      "assignee": Object {
        "source": "Jira",
        "uid": "6025c1954fb89e0070d00ae3",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_Label": Object {
      "name": "l0",
      "source": "Jira",
    },
  },
  Object {
    "tms_TaskTag": Object {
      "label": Object {
        "name": "l0",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_Label": Object {
      "name": "l1",
      "source": "Jira",
    },
  },
  Object {
    "tms_TaskTag": Object {
      "label": Object {
        "name": "l1",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-16T22:42:42.308Z",
      "removedAt": "2021-09-16T22:45:30.905Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "15",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-16T22:47:11.885Z",
      "removedAt": "2021-09-16T22:47:23.663Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "16",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T06:36:26.329Z",
      "removedAt": "2021-09-17T06:37:15.206Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "17",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T07:12:32.830Z",
      "removedAt": "2021-09-22T16:57:44.008Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "18",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-22T16:57:44.008Z",
      "removedAt": "2021-09-22T20:38:03.327Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "19",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T07:10:10.556Z",
      "removedAt": "2021-09-17T07:12:32.830Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "20",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-22T20:38:03.327Z",
      "removedAt": "2021-10-01T22:16:08.307Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "21",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-10-01T22:16:08.673Z",
      "removedAt": "2022-06-13T22:49:44.016Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "23",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2022-06-16T15:34:47.608Z",
      "removedAt": "2022-06-16T20:50:28.697Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "27",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2024-03-08T17:59:28.180Z",
      "removedAt": null,
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "55",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2024-03-08T17:30:59.921Z",
      "removedAt": "2024-03-08T17:59:28.180Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "66",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
    },
  },
  Object {
    "tms_Task__Update": Object {
      "mask": Array [
        "status",
        "statusChangelog",
        "statusChangedAt",
        "updatedAt",
      ],
      "patch": Object {
        "status": Object {
          "category": "Custom",
          "detail": "Moved",
        },
        "statusChangedAt": "2024-10-15T20:25:15.824Z",
        "statusChangelog": Array [
          Object {
            "changedAt": "2021-10-07T20:00:08.396Z",
            "status": Object {
              "category": "Todo",
              "detail": "To Do",
            },
          },
          Object {
            "changedAt": "2024-10-15T20:25:15.824Z",
            "status": Object {
              "category": "Custom",
              "detail": "Moved",
            },
          },
        ],
        "updatedAt": "2024-10-15T20:25:15.824Z",
      },
      "source": "Jira",
      "where": Object {
        "source": "Jira",
        "uid": "TEST-11",
      },
    },
  },
  Object {
    "tms_TaskDependency__Deletion": Object {
      "flushRequired": false,
      "source": "Jira",
      "where": Object {
        "dependentTask": Object {
          "source": "Jira",
          "uid": "PLAYG-6",
        },
      },
    },
  },
  Object {
    "__Flush": Object {
      "source": "Jira",
    },
  },
  Object {
    "tms_TaskDependency": Object {
      "blocking": true,
      "dependencyType": Object {
        "category": "BlockedBy",
        "detail": "is blocked by",
      },
      "dependentTask": Object {
        "source": "Jira",
        "uid": "PLAYG-6",
      },
      "fulfillingTask": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
      "fulfillingType": Object {
        "category": "Blocks",
        "detail": "blocks",
      },
      "source": "Jira",
    },
  },
]
`;

exports[`faros_jira process records from all streams 1`] = `
Array [
  "Processed 17 records",
  "Processed records by stream: {\\\\\\"mytestsource__jira__faros_board_issues\\\\\\":1,\\\\\\"mytestsource__jira__faros_boards\\\\\\":2,\\\\\\"mytestsource__jira__faros_issue_additional_fields\\\\\\":1,\\\\\\"mytestsource__jira__faros_issue_pull_requests\\\\\\":1,\\\\\\"mytestsource__jira__faros_issues\\\\\\":1,\\\\\\"mytestsource__jira__faros_project_version_issues\\\\\\":1,\\\\\\"mytestsource__jira__faros_project_versions\\\\\\":1,\\\\\\"mytestsource__jira__faros_projects\\\\\\":1,\\\\\\"mytestsource__jira__faros_sprint_reports\\\\\\":2,\\\\\\"mytestsource__jira__faros_sprints\\\\\\":2,\\\\\\"mytestsource__jira__faros_team_memberships\\\\\\":2,\\\\\\"mytestsource__jira__faros_teams\\\\\\":1,\\\\\\"mytestsource__jira__faros_users\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 51 records",
  "Would write records by model: {\\\\\\"__Flush\\\\\\":1,\\\\\\"faros_TmsTaskBoardOptions\\\\\\":1,\\\\\\"tms_Project\\\\\\":1,\\\\\\"tms_ProjectReleaseRelationship\\\\\\":1,\\\\\\"tms_Release\\\\\\":1,\\\\\\"tms_Sprint\\\\\\":2,\\\\\\"tms_SprintBoardRelationship\\\\\\":2,\\\\\\"tms_SprintHistory\\\\\\":11,\\\\\\"tms_SprintReport\\\\\\":14,\\\\\\"tms_Task\\\\\\":1,\\\\\\"tms_TaskAssignment\\\\\\":1,\\\\\\"tms_TaskBoard\\\\\\":2,\\\\\\"tms_TaskBoardProjectRelationship\\\\\\":2,\\\\\\"tms_TaskBoardRelationship\\\\\\":1,\\\\\\"tms_TaskDependency__Deletion\\\\\\":1,\\\\\\"tms_TaskProjectRelationship\\\\\\":1,\\\\\\"tms_TaskPullRequestAssociation\\\\\\":1,\\\\\\"tms_TaskReleaseRelationship\\\\\\":1,\\\\\\"tms_Task__Update\\\\\\":2,\\\\\\"tms_Team\\\\\\":1,\\\\\\"tms_TeamMembership\\\\\\":2,\\\\\\"tms_User\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`faros_jira process records from all streams 2`] = `
Array [
  Object {
    "tms_TaskBoardRelationship": Object {
      "board": Object {
        "source": "Jira",
        "uid": "48",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-185",
      },
    },
  },
  Object {
    "tms_TaskBoard": Object {
      "name": "Tasks without a board in project PLAYG",
      "source": "Jira",
      "type": Object {
        "category": "Custom",
        "detail": "Custom",
      },
      "uid": "faros-tasks-with-no-board-PLAYG",
    },
  },
  Object {
    "tms_TaskBoardProjectRelationship": Object {
      "board": Object {
        "source": "Jira",
        "uid": "faros-tasks-with-no-board-PLAYG",
      },
      "project": Object {
        "source": "Jira",
        "uid": "PLAYG",
      },
      "source": "Jira",
    },
  },
  Object {
    "tms_TaskBoard": Object {
      "name": "PLAYG board",
      "source": "Jira",
      "type": Object {
        "category": "Scrum",
        "detail": "scrum",
      },
      "uid": "21",
    },
  },
  Object {
    "tms_TaskBoardProjectRelationship": Object {
      "board": Object {
        "source": "Jira",
        "uid": "21",
      },
      "project": Object {
        "source": "Jira",
        "uid": "PLAYG",
      },
      "source": "Jira",
    },
  },
  Object {
    "faros_TmsTaskBoardOptions": Object {
      "board": Object {
        "source": "Jira",
        "uid": "21",
      },
      "inclusion": Object {
        "category": "Included",
      },
      "source": "Jira",
    },
  },
  Object {
    "tms_TaskPullRequestAssociation": Object {
      "pullRequest": Object {
        "number": 2069,
        "repository": Object {
          "name": "airbyte-connectors",
          "organization": Object {
            "source": "GitHub",
            "uid": "faros-ai",
          },
        },
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-153",
      },
    },
  },
  Object {
    "tms_Task": Object {
      "additionalFields": Array [
        Object {
          "name": "Components",
          "value": "[]",
        },
      ],
      "createdAt": "2021-09-16T22:42:13.869Z",
      "creator": Object {
        "source": "Jira",
        "uid": "60d6b0c0c90cb2006892d7fb",
      },
      "description": null,
      "epic": null,
      "name": "task 1",
      "parent": null,
      "points": 1,
      "priority": "Medium",
      "resolutionStatus": null,
      "resolvedAt": null,
      "source": "Jira",
      "sourceSystemId": "10456",
      "sprint": Object {
        "source": "Jira",
        "uid": "55",
      },
      "status": Object {
        "category": "Todo",
        "detail": "To Do",
      },
      "statusChangedAt": "2024-03-08T17:52:41.851Z",
      "statusChangelog": Array [
        Object {
          "changedAt": "2021-09-16T22:42:13.869Z",
          "status": Object {
            "category": "Todo",
            "detail": "To Do",
          },
        },
        Object {
          "changedAt": "2021-09-16T22:43:43.077Z",
          "status": Object {
            "category": "InProgress",
            "detail": "In Progress",
          },
        },
        Object {
          "changedAt": "2022-03-15T07:19:03.653Z",
          "status": Object {
            "category": "InProgress",
            "detail": "QA",
          },
        },
        Object {
          "changedAt": "2024-03-08T17:52:41.851Z",
          "status": Object {
            "category": "Todo",
            "detail": "To Do",
          },
        },
      ],
      "type": Object {
        "category": "Story",
        "detail": "Story",
      },
      "uid": "PLAYG-1",
      "updatedAt": "2024-03-08T17:59:28.167Z",
      "url": "https://faros-ai.atlassian.net/browse/PLAYG-1",
    },
  },
  Object {
    "tms_TaskProjectRelationship": Object {
      "project": Object {
        "source": "Jira",
        "uid": "PLAYG",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_TaskAssignment": Object {
      "assignedAt": "2021-10-07T18:04:10.236Z",
      "assignee": Object {
        "source": "Jira",
        "uid": "6025c1954fb89e0070d00ae3",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-16T22:42:42.308Z",
      "removedAt": "2021-09-16T22:45:30.905Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "15",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-16T22:47:11.885Z",
      "removedAt": "2021-09-16T22:47:23.663Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "16",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T06:36:26.329Z",
      "removedAt": "2021-09-17T06:37:15.206Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "17",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T07:12:32.830Z",
      "removedAt": "2021-09-22T16:57:44.008Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "18",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-22T16:57:44.008Z",
      "removedAt": "2021-09-22T20:38:03.327Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "19",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T07:10:10.556Z",
      "removedAt": "2021-09-17T07:12:32.830Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "20",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-22T20:38:03.327Z",
      "removedAt": "2021-10-01T22:16:08.307Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "21",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-10-01T22:16:08.673Z",
      "removedAt": "2022-06-13T22:49:44.016Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "23",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2022-06-16T15:34:47.608Z",
      "removedAt": "2022-06-16T20:50:28.697Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "27",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2024-03-08T17:59:28.180Z",
      "removedAt": null,
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "55",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2024-03-08T17:30:59.921Z",
      "removedAt": "2024-03-08T17:59:28.180Z",
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "66",
      },
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_Task__Update": Object {
      "mask": Array [
        "status",
        "statusChangelog",
        "statusChangedAt",
        "updatedAt",
      ],
      "patch": Object {
        "status": Object {
          "category": "Custom",
          "detail": "Moved",
        },
        "statusChangedAt": "2022-04-20T11:45:00.953Z",
        "statusChangelog": Array [
          Object {
            "changedAt": "2021-09-16T22:42:13.869Z",
            "status": Object {
              "category": "Todo",
              "detail": "To Do",
            },
          },
          Object {
            "changedAt": "2021-09-16T22:43:43.077Z",
            "status": Object {
              "category": "InProgress",
              "detail": "In Progress",
            },
          },
          Object {
            "changedAt": "2022-03-15T07:19:03.653Z",
            "status": Object {
              "category": "InProgress",
              "detail": "QA",
            },
          },
          Object {
            "changedAt": "2022-04-20T11:45:00.953Z",
            "status": Object {
              "category": "Custom",
              "detail": "Moved",
            },
          },
        ],
        "updatedAt": "2022-04-20T11:45:00.953Z",
      },
      "source": "Jira",
      "where": Object {
        "source": "Jira",
        "uid": "TEST-2",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "Completed",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-44",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "Completed",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-45",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "CompletedOutsideSprint",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-3",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "CompletedOutsideSprint",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-26",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-9",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-15",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-22",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "QA",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-4",
        },
      },
      "status": Object {
        "category": "Todo",
        "detail": "Open",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-20",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": 10,
      "points": 9,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-24",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-29",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-38",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": true,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-40",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "QA",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "classification": Object {
        "category": "Removed",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira",
          "uid": "PLAYG-11",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_Sprint": Object {
      "closedAt": "2024-05-13T07:10:11.135Z",
      "endedAt": "2024-05-19T22:39:39.000Z",
      "name": "Another Sprint",
      "openedAt": null,
      "source": "Jira",
      "startedAt": "2024-05-13T07:09:41.502Z",
      "state": "Closed",
      "uid": "75",
    },
  },
  Object {
    "tms_SprintBoardRelationship": Object {
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "75",
      },
    },
  },
  Object {
    "tms_Sprint": Object {
      "closedAt": null,
      "endedAt": null,
      "name": "PLAYG Sprint 20",
      "openedAt": null,
      "source": "Jira",
      "startedAt": null,
      "state": "Future",
      "uid": "55",
    },
  },
  Object {
    "tms_SprintBoardRelationship": Object {
      "board": Object {
        "source": "Jira",
        "uid": "49",
      },
      "source": "Jira",
      "sprint": Object {
        "source": "Jira",
        "uid": "55",
      },
    },
  },
  Object {
    "tms_Project": Object {
      "description": "Playground project description",
      "name": "Playground",
      "source": "Jira",
      "sourceSystemId": "10011",
      "uid": "PLAYG",
    },
  },
  Object {
    "tms_User": Object {
      "emailAddress": "john.doe@example.com",
      "inactive": false,
      "name": "John Doe",
      "source": "Jira",
      "uid": "61f99bc0acd4cb0069cfd675",
    },
  },
  Object {
    "tms_TaskReleaseRelationship": Object {
      "release": Object {
        "source": "Jira",
        "uid": "10006",
      },
      "source": "Jira",
      "task": Object {
        "source": "Jira",
        "uid": "PLAYG-4",
      },
    },
  },
  Object {
    "tms_Release": Object {
      "archived": false,
      "description": null,
      "name": "Test Release",
      "overdue": true,
      "released": false,
      "releasedAt": "2021-11-19T00:00:00.000Z",
      "source": "Jira",
      "startedAt": "2021-11-15T00:00:00.000Z",
      "uid": "10006",
    },
  },
  Object {
    "tms_ProjectReleaseRelationship": Object {
      "project": Object {
        "source": "Jira",
        "uid": "PLAYG",
      },
      "release": Object {
        "source": "Jira",
        "uid": "10006",
      },
      "source": "Jira",
    },
  },
  Object {
    "tms_Team": Object {
      "name": "Test",
      "parentTeam": Object {
        "uid": "all_teams",
      },
      "source": "Jira",
      "teamChain": Array [
        "123ad121-1122-45c5-8d0b-0681b9233ea9",
        "all_teams",
      ],
      "uid": "123ad121-1122-45c5-8d0b-0681b9233ea9",
    },
  },
  Object {
    "tms_TeamMembership": Object {
      "member": Object {
        "source": "Jira",
        "uid": "12334c037692da100700011",
      },
      "source": "Jira",
      "team": Object {
        "source": "Jira",
        "uid": "123ad121-1122-45c5-8d0b-0681b9233ea9",
      },
    },
  },
  Object {
    "tms_TeamMembership": Object {
      "member": Object {
        "source": "Jira",
        "uid": "3214dfa413fc70069d12323",
      },
      "source": "Jira",
      "team": Object {
        "source": "Jira",
        "uid": "123ad121-1122-45c5-8d0b-0681b9233ea9",
      },
    },
  },
  Object {
    "tms_Task__Update": Object {
      "mask": Array [
        "additionalFields",
      ],
      "patch": Object {
        "additionalFields": Array [
          Object {
            "name": "Custom String Field",
            "value": "Custom",
          },
          Object {
            "name": "Custom Number Field",
            "value": "1",
          },
        ],
      },
      "source": "Jira",
      "where": Object {
        "source": "Jira",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_TaskDependency__Deletion": Object {
      "flushRequired": false,
      "source": "Jira",
      "where": Object {
        "dependentTask": Object {
          "source": "Jira",
          "uid": "PLAYG-1",
        },
      },
    },
  },
  Object {
    "__Flush": Object {
      "source": "Jira",
    },
  },
]
`;

exports[`faros_jira process records from all streams with qualifier 1`] = `
Array [
  "Processed 17 records",
  "Processed records by stream: {\\\\\\"mytestsource__jira__faros_board_issues\\\\\\":1,\\\\\\"mytestsource__jira__faros_boards\\\\\\":2,\\\\\\"mytestsource__jira__faros_issue_additional_fields\\\\\\":1,\\\\\\"mytestsource__jira__faros_issue_pull_requests\\\\\\":1,\\\\\\"mytestsource__jira__faros_issues\\\\\\":1,\\\\\\"mytestsource__jira__faros_project_version_issues\\\\\\":1,\\\\\\"mytestsource__jira__faros_project_versions\\\\\\":1,\\\\\\"mytestsource__jira__faros_projects\\\\\\":1,\\\\\\"mytestsource__jira__faros_sprint_reports\\\\\\":2,\\\\\\"mytestsource__jira__faros_sprints\\\\\\":2,\\\\\\"mytestsource__jira__faros_team_memberships\\\\\\":2,\\\\\\"mytestsource__jira__faros_teams\\\\\\":1,\\\\\\"mytestsource__jira__faros_users\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 51 records",
  "Would write records by model: {\\\\\\"__Flush\\\\\\":1,\\\\\\"faros_TmsTaskBoardOptions\\\\\\":1,\\\\\\"tms_Project\\\\\\":1,\\\\\\"tms_ProjectReleaseRelationship\\\\\\":1,\\\\\\"tms_Release\\\\\\":1,\\\\\\"tms_Sprint\\\\\\":2,\\\\\\"tms_SprintBoardRelationship\\\\\\":2,\\\\\\"tms_SprintHistory\\\\\\":11,\\\\\\"tms_SprintReport\\\\\\":14,\\\\\\"tms_Task\\\\\\":1,\\\\\\"tms_TaskAssignment\\\\\\":1,\\\\\\"tms_TaskBoard\\\\\\":2,\\\\\\"tms_TaskBoardProjectRelationship\\\\\\":2,\\\\\\"tms_TaskBoardRelationship\\\\\\":1,\\\\\\"tms_TaskDependency__Deletion\\\\\\":1,\\\\\\"tms_TaskProjectRelationship\\\\\\":1,\\\\\\"tms_TaskPullRequestAssociation\\\\\\":1,\\\\\\"tms_TaskReleaseRelationship\\\\\\":1,\\\\\\"tms_Task__Update\\\\\\":2,\\\\\\"tms_Team\\\\\\":1,\\\\\\"tms_TeamMembership\\\\\\":2,\\\\\\"tms_User\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`faros_jira process records from all streams with qualifier 2`] = `
Array [
  Object {
    "tms_TaskBoardRelationship": Object {
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "48",
      },
      "source": "Jira_Instance2",
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-185",
      },
    },
  },
  Object {
    "tms_TaskBoard": Object {
      "name": "Tasks without a board in project PLAYG",
      "source": "Jira_Instance2",
      "type": Object {
        "category": "Custom",
        "detail": "Custom",
      },
      "uid": "faros-tasks-with-no-board-PLAYG",
    },
  },
  Object {
    "tms_TaskBoardProjectRelationship": Object {
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "faros-tasks-with-no-board-PLAYG",
      },
      "project": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG",
      },
      "source": "Jira_Instance2",
    },
  },
  Object {
    "tms_TaskBoard": Object {
      "name": "PLAYG board",
      "source": "Jira_Instance2",
      "type": Object {
        "category": "Scrum",
        "detail": "scrum",
      },
      "uid": "21",
    },
  },
  Object {
    "tms_TaskBoardProjectRelationship": Object {
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "21",
      },
      "project": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG",
      },
      "source": "Jira_Instance2",
    },
  },
  Object {
    "faros_TmsTaskBoardOptions": Object {
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "21",
      },
      "inclusion": Object {
        "category": "Included",
      },
      "source": "Jira_Instance2",
    },
  },
  Object {
    "tms_TaskPullRequestAssociation": Object {
      "pullRequest": Object {
        "number": 2069,
        "repository": Object {
          "name": "airbyte-connectors",
          "organization": Object {
            "source": "GitHub",
            "uid": "faros-ai",
          },
        },
      },
      "source": "Jira_Instance2",
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-153",
      },
    },
  },
  Object {
    "tms_Task": Object {
      "additionalFields": Array [
        Object {
          "name": "Components",
          "value": "[]",
        },
      ],
      "createdAt": "2021-09-16T22:42:13.869Z",
      "creator": Object {
        "source": "Jira_Instance2",
        "uid": "60d6b0c0c90cb2006892d7fb",
      },
      "description": null,
      "epic": null,
      "name": "task 1",
      "parent": null,
      "points": 1,
      "priority": "Medium",
      "resolutionStatus": null,
      "resolvedAt": null,
      "source": "Jira_Instance2",
      "sourceSystemId": "10456",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "55",
      },
      "status": Object {
        "category": "Todo",
        "detail": "To Do",
      },
      "statusChangedAt": "2024-03-08T17:52:41.851Z",
      "statusChangelog": Array [
        Object {
          "changedAt": "2021-09-16T22:42:13.869Z",
          "status": Object {
            "category": "Todo",
            "detail": "To Do",
          },
        },
        Object {
          "changedAt": "2021-09-16T22:43:43.077Z",
          "status": Object {
            "category": "InProgress",
            "detail": "In Progress",
          },
        },
        Object {
          "changedAt": "2022-03-15T07:19:03.653Z",
          "status": Object {
            "category": "InProgress",
            "detail": "QA",
          },
        },
        Object {
          "changedAt": "2024-03-08T17:52:41.851Z",
          "status": Object {
            "category": "Todo",
            "detail": "To Do",
          },
        },
      ],
      "type": Object {
        "category": "Story",
        "detail": "Story",
      },
      "uid": "PLAYG-1",
      "updatedAt": "2024-03-08T17:59:28.167Z",
      "url": "https://faros-ai.atlassian.net/browse/PLAYG-1",
    },
  },
  Object {
    "tms_TaskProjectRelationship": Object {
      "project": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG",
      },
      "source": "Jira_Instance2",
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_TaskAssignment": Object {
      "assignedAt": "2021-10-07T18:04:10.236Z",
      "assignee": Object {
        "source": "Jira_Instance2",
        "uid": "6025c1954fb89e0070d00ae3",
      },
      "source": "Jira_Instance2",
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-16T22:42:42.308Z",
      "removedAt": "2021-09-16T22:45:30.905Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "15",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-16T22:47:11.885Z",
      "removedAt": "2021-09-16T22:47:23.663Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "16",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T06:36:26.329Z",
      "removedAt": "2021-09-17T06:37:15.206Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "17",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T07:12:32.830Z",
      "removedAt": "2021-09-22T16:57:44.008Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "18",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-22T16:57:44.008Z",
      "removedAt": "2021-09-22T20:38:03.327Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "19",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-17T07:10:10.556Z",
      "removedAt": "2021-09-17T07:12:32.830Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "20",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-09-22T20:38:03.327Z",
      "removedAt": "2021-10-01T22:16:08.307Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "21",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2021-10-01T22:16:08.673Z",
      "removedAt": "2022-06-13T22:49:44.016Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "23",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2022-06-16T15:34:47.608Z",
      "removedAt": "2022-06-16T20:50:28.697Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "27",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2024-03-08T17:59:28.180Z",
      "removedAt": null,
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "55",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_SprintHistory": Object {
      "addedAt": "2024-03-08T17:30:59.921Z",
      "removedAt": "2024-03-08T17:59:28.180Z",
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "66",
      },
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_Task__Update": Object {
      "mask": Array [
        "status",
        "statusChangelog",
        "statusChangedAt",
        "updatedAt",
      ],
      "patch": Object {
        "status": Object {
          "category": "Custom",
          "detail": "Moved",
        },
        "statusChangedAt": "2022-04-20T11:45:00.953Z",
        "statusChangelog": Array [
          Object {
            "changedAt": "2021-09-16T22:42:13.869Z",
            "status": Object {
              "category": "Todo",
              "detail": "To Do",
            },
          },
          Object {
            "changedAt": "2021-09-16T22:43:43.077Z",
            "status": Object {
              "category": "InProgress",
              "detail": "In Progress",
            },
          },
          Object {
            "changedAt": "2022-03-15T07:19:03.653Z",
            "status": Object {
              "category": "InProgress",
              "detail": "QA",
            },
          },
          Object {
            "changedAt": "2022-04-20T11:45:00.953Z",
            "status": Object {
              "category": "Custom",
              "detail": "Moved",
            },
          },
        ],
        "updatedAt": "2022-04-20T11:45:00.953Z",
      },
      "source": "Jira_Instance2",
      "where": Object {
        "source": "Jira_Instance2",
        "uid": "TEST-2",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "Completed",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-44",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "Completed",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-45",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "CompletedOutsideSprint",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-3",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "CompletedOutsideSprint",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-26",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-9",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-15",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "39",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-22",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "QA",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-4",
        },
      },
      "status": Object {
        "category": "Todo",
        "detail": "Open",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-20",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": 10,
      "points": 9,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-24",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-29",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-38",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "In Progress",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": true,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "NotCompleted",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-40",
        },
      },
      "status": Object {
        "category": "InProgress",
        "detail": "QA",
      },
    },
  },
  Object {
    "tms_SprintReport": Object {
      "addedDuringSprint": null,
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "classification": Object {
        "category": "Removed",
      },
      "plannedPoints": null,
      "points": null,
      "source": "Jira_Instance2",
      "sprintHistory": Object {
        "sprint": Object {
          "source": "Jira_Instance2",
          "uid": "51",
        },
        "task": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-11",
        },
      },
      "status": Object {
        "category": "Done",
        "detail": "Done",
      },
    },
  },
  Object {
    "tms_Sprint": Object {
      "closedAt": "2024-05-13T07:10:11.135Z",
      "endedAt": "2024-05-19T22:39:39.000Z",
      "name": "Another Sprint",
      "openedAt": null,
      "source": "Jira_Instance2",
      "startedAt": "2024-05-13T07:09:41.502Z",
      "state": "Closed",
      "uid": "75",
    },
  },
  Object {
    "tms_SprintBoardRelationship": Object {
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "75",
      },
    },
  },
  Object {
    "tms_Sprint": Object {
      "closedAt": null,
      "endedAt": null,
      "name": "PLAYG Sprint 20",
      "openedAt": null,
      "source": "Jira_Instance2",
      "startedAt": null,
      "state": "Future",
      "uid": "55",
    },
  },
  Object {
    "tms_SprintBoardRelationship": Object {
      "board": Object {
        "source": "Jira_Instance2",
        "uid": "49",
      },
      "source": "Jira_Instance2",
      "sprint": Object {
        "source": "Jira_Instance2",
        "uid": "55",
      },
    },
  },
  Object {
    "tms_Project": Object {
      "description": "Playground project description",
      "name": "Playground",
      "source": "Jira_Instance2",
      "sourceSystemId": "10011",
      "uid": "PLAYG",
    },
  },
  Object {
    "tms_User": Object {
      "emailAddress": "john.doe@example.com",
      "inactive": false,
      "name": "John Doe",
      "source": "Jira_Instance2",
      "uid": "61f99bc0acd4cb0069cfd675",
    },
  },
  Object {
    "tms_TaskReleaseRelationship": Object {
      "release": Object {
        "source": "Jira_Instance2",
        "uid": "10006",
      },
      "source": "Jira_Instance2",
      "task": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-4",
      },
    },
  },
  Object {
    "tms_Release": Object {
      "archived": false,
      "description": null,
      "name": "Test Release",
      "overdue": true,
      "released": false,
      "releasedAt": "2021-11-19T00:00:00.000Z",
      "source": "Jira_Instance2",
      "startedAt": "2021-11-15T00:00:00.000Z",
      "uid": "10006",
    },
  },
  Object {
    "tms_ProjectReleaseRelationship": Object {
      "project": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG",
      },
      "release": Object {
        "source": "Jira_Instance2",
        "uid": "10006",
      },
      "source": "Jira_Instance2",
    },
  },
  Object {
    "tms_Team": Object {
      "name": "Test",
      "parentTeam": Object {
        "uid": "all_teams",
      },
      "source": "Jira_Instance2",
      "teamChain": Array [
        "123ad121-1122-45c5-8d0b-0681b9233ea9",
        "all_teams",
      ],
      "uid": "123ad121-1122-45c5-8d0b-0681b9233ea9",
    },
  },
  Object {
    "tms_TeamMembership": Object {
      "member": Object {
        "source": "Jira_Instance2",
        "uid": "12334c037692da100700011",
      },
      "source": "Jira_Instance2",
      "team": Object {
        "source": "Jira_Instance2",
        "uid": "123ad121-1122-45c5-8d0b-0681b9233ea9",
      },
    },
  },
  Object {
    "tms_TeamMembership": Object {
      "member": Object {
        "source": "Jira_Instance2",
        "uid": "3214dfa413fc70069d12323",
      },
      "source": "Jira_Instance2",
      "team": Object {
        "source": "Jira_Instance2",
        "uid": "123ad121-1122-45c5-8d0b-0681b9233ea9",
      },
    },
  },
  Object {
    "tms_Task__Update": Object {
      "mask": Array [
        "additionalFields",
      ],
      "patch": Object {
        "additionalFields": Array [
          Object {
            "name": "Custom String Field",
            "value": "Custom",
          },
          Object {
            "name": "Custom Number Field",
            "value": "1",
          },
        ],
      },
      "source": "Jira_Instance2",
      "where": Object {
        "source": "Jira_Instance2",
        "uid": "PLAYG-1",
      },
    },
  },
  Object {
    "tms_TaskDependency__Deletion": Object {
      "flushRequired": false,
      "source": "Jira_Instance2",
      "where": Object {
        "dependentTask": Object {
          "source": "Jira_Instance2",
          "uid": "PLAYG-1",
        },
      },
    },
  },
  Object {
    "__Flush": Object {
      "source": "Jira_Instance2",
    },
  },
]
`;
